// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Pagination / Large 1 page 1`] = `
<nav
  aria-label="Pagination"
  role="navigation"
/>
`;

exports[`Storyshots Molecules / Pagination / Large 2 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: #2650BF;
}

.c6:active {
  background-color: #1F4099;
}

.c4 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 80px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c7:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover span {
  color: #FFFFFF;
}

.c7:hover svg {
  fill: #FFFFFF;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c11:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:hover span {
  color: #FFFFFF;
}

.c11:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <ul
      className="c1 c2"
    >
      <li
        className="c3"
      >
        <div
          className="c0 c4"
        >
          <span
            className="c5"
          >
            1
          </span>
        </div>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                2
              </span>
            </span>
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c10"
    >
      <button
        aria-label="Go to next page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c6 c11"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c8"
          >
            <svg
              aria-hidden="true"
              className="c12"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Large 12 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: #2650BF;
}

.c6:active {
  background-color: #1F4099;
}

.c4 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 20px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 240px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c7:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover span {
  color: #FFFFFF;
}

.c7:hover svg {
  fill: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c12:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12:hover span {
  color: #FFFFFF;
}

.c12:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <ul
      className="c1 c2"
    >
      <li
        className="c3"
      >
        <div
          className="c0 c4"
        >
          <span
            className="c5"
          >
            1
          </span>
        </div>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                2
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                3
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 12"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                12
              </span>
            </span>
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c11"
    >
      <button
        aria-label="Go to next page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c6 c12"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c8"
          >
            <svg
              aria-hidden="true"
              className="c13"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Large 999 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: #2650BF;
}

.c6:active {
  background-color: #1F4099;
}

.c4 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 20px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 240px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c7:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover span {
  color: #FFFFFF;
}

.c7:hover svg {
  fill: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c12:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12:hover span {
  color: #FFFFFF;
}

.c12:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <ul
      className="c1 c2"
    >
      <li
        className="c3"
      >
        <div
          className="c0 c4"
        >
          <span
            className="c5"
          >
            1
          </span>
        </div>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                2
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                3
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 999"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                999
              </span>
            </span>
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c11"
    >
      <button
        aria-label="Go to next page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c6 c12"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c8"
          >
            <svg
              aria-hidden="true"
              className="c13"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Large Controlled Pagination 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
}

.c5 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c6 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: #2650BF;
}

.c2:active {
  background-color: #1F4099;
}

.c12 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 20px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 240px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c3:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover span {
  color: #FFFFFF;
}

.c3:hover svg {
  fill: #FFFFFF;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c9:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9:hover span {
  color: #FFFFFF;
}

.c9:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-label="Go to previous page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c2 c3"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              className="c5"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <ul
      className="c6 c7"
    >
      <li
        className="c8"
      >
        <button
          aria-label="Go to Page 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2 c9"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              <span
                className="c10"
              >
                1
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c11"
      >
        <span
          className="c10"
        >
          ...
        </span>
      </li>
      <li
        className="c8"
      >
        <button
          aria-label="Go to Page 4"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2 c9"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              <span
                className="c10"
              >
                4
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c8"
      >
        <div
          className="c0 c12"
        >
          <span
            className="c13"
          >
            5
          </span>
        </div>
      </li>
      <li
        className="c8"
      >
        <button
          aria-label="Go to Page 6"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2 c9"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              <span
                className="c10"
              >
                6
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c11"
      >
        <span
          className="c10"
        >
          ...
        </span>
      </li>
      <li
        className="c8"
      >
        <button
          aria-label="Go to Page 10"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2 c9"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4"
            >
              <span
                className="c10"
              >
                10
              </span>
            </span>
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c1"
    >
      <button
        aria-label="Go to next page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c2 c3"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c4"
          >
            <svg
              aria-hidden="true"
              className="c5"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Large Large 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: #2650BF;
}

.c6:active {
  background-color: #1F4099;
}

.c4 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 20px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 240px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c7:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover span {
  color: #FFFFFF;
}

.c7:hover svg {
  fill: #FFFFFF;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c12:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12:hover span {
  color: #FFFFFF;
}

.c12:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <ul
      className="c1 c2"
    >
      <li
        className="c3"
      >
        <div
          className="c0 c4"
        >
          <span
            className="c5"
          >
            1
          </span>
        </div>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                2
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                3
              </span>
            </span>
          </span>
        </button>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c3"
      >
        <button
          aria-label="Go to Page 10"
          className="NormalizedButton__Button-sc-ey7f5x-0 c6 c7"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c8"
            >
              <span
                className="c9"
              >
                10
              </span>
            </span>
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c11"
    >
      <button
        aria-label="Go to next page"
        className="NormalizedButton__Button-sc-ey7f5x-0 c6 c12"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="c8"
          >
            <svg
              aria-hidden="true"
              className="c13"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              width={16}
            >
              <path
                d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Large Links Pagination 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  box-sizing: border-box;
}

.c4 {
  color: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  display: inline;
  padding: 0;
  color: #336BFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11 {
  background-color: #336BFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 40px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 20px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 240px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
  box-sizing: border-box;
  border: 1px solid #BDBDBD;
}

.c3:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover span {
  color: #FFFFFF;
}

.c3:hover svg {
  fill: #FFFFFF;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border: none;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  color: #282823;
}

.c8:hover {
  background-color: #2650BF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover span {
  color: #FFFFFF;
}

.c8:hover svg {
  fill: #FFFFFF;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        aria-label="Go to previous page"
        className="c2 c3"
        href="/4"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <a
          aria-label="Go to Page 1"
          className="c2 c8"
          href="/1"
          onClick={[Function]}
        >
          <span
            className="c9"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <a
          aria-label="Go to Page 4"
          className="c2 c8"
          href="/4"
          onClick={[Function]}
        >
          <span
            className="c9"
          >
            4
          </span>
        </a>
      </li>
      <li
        className="c7"
      >
        <div
          className="c0 c11"
        >
          <span
            className="c12"
          >
            5
          </span>
        </div>
      </li>
      <li
        className="c7"
      >
        <a
          aria-label="Go to Page 6"
          className="c2 c8"
          href="/6"
          onClick={[Function]}
        >
          <span
            className="c9"
          >
            6
          </span>
        </a>
      </li>
      <li
        className="c10"
      >
        <span
          className="c9"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <a
          aria-label="Go to Page 10"
          className="c2 c8"
          href="/10"
          onClick={[Function]}
        >
          <span
            className="c9"
          >
            10
          </span>
        </a>
      </li>
    </ul>
    <div
      className="c1"
    >
      <a
        aria-label="Go to next page"
        className="c2 c3"
        href="/6"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            d="M2.58 16l8-8-8-8h2.828l8 8-8 8H2.58z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
  </div>
</nav>
`;
